--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Open Library - Book Listing</title>
 </head>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.8/axios.js" integrity="sha512-pmaEGtUAy7E5gRmwjLqQAD/QWw0dL4Z59b6b+2HQkqQwQ+HcPLLb9/KbUNo5zr10WuXmbivK9nYVZOyDkMgZMg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="/script.js"></script>
 <style>
     table {
         border-collapse: collapse;
@@ -47,15 +48,15 @@
         <thead>
             <th>Title</th>
             <th>Author</th>
-            <th>Edition</th>
             <th>Stars</th>
         </thead>
-        <tr>
-            <td>Trudy Takes Charge</td>
-            <td>Mary A Faid</td>
-            <td>Vol 1</td>
-            <td>3</td>
-        </tr>
+        <tbody id="table-body">
+            <tr>
+                <td>Trudy Takes Charge</td>
+                <td>Mary A Faid</td>
+                <td>3</td>
+            </tr>
+        </tbody>
     </table>
     <div style="display: flex;justify-content: space-between;padding:10px;width:750px">
         <a href="#"><< Previous Page</a>
