--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <option value="popularity">Popularity</option>
         </select>
         &nbsp;&nbsp;&nbsp;
-        <input style="width: 299px;" id="search-input" placeholder="search...">
+        <input style="width: 299px;" id="search-input" placeholder="Type & press enter to search...">
     </div>
     
     <table style="width: 800px">
@@ -51,11 +51,6 @@
             <th>Stars</th>
         </thead>
         <tbody id="table-body">
-            <tr>
-                <td>Trudy Takes Charge</td>
-                <td>Mary A Faid</td>
-                <td>3</td>
-            </tr>
         </tbody>
     </table>
     <div style="display: flex;justify-content: space-between;padding:10px;width:750px">
