--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         </tbody>
     </table>
     <div style="display: flex;justify-content: space-between;padding:10px;width:750px">
-        <a href="#"><< Previous Page</a>
-        <a href="#">Next Page >></a>
+        <a href="#" id="prev-page"><< Previous Page</a>
+        <a href="#" id="next-page">Next Page >></a>
     </div>
 </body>
 </html>
