--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Open Library - Book Listing</title>
 </head>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.8/axios.js" integrity="sha512-pmaEGtUAy7E5gRmwjLqQAD/QWw0dL4Z59b6b+2HQkqQwQ+HcPLLb9/KbUNo5zr10WuXmbivK9nYVZOyDkMgZMg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script src="/script.js"></script>
+<script src="script.js"></script>
 <style>
     table {
         border-collapse: collapse;
